2010-07-12  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c:
   Focus toolbar item when pressing Go to Line keybinding only when
   it's not in the toolbar's drop down overflow menu (fixes #3027454).


2010-07-11  Lex Trotman  <elextr(at)gmail(dot)com>

 * src/build.c:
   Fix build menu translation problems.


2010-07-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Fix scrolling the editor line in view after loading a session and
   switching document tabs. Note this causes repainting so needs
   improvement.


2010-07-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/build.c, src/project.c, src/project.h:
   Show the Project Properties build tab when choosing 'Set Build
   Commands' for now to prevent confusion with non-project commands.


2010-07-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/search.c, doc/geany.txt, doc/geany.html:
   Fix Grep --exclude-dir example.


2010-07-02  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/geany.txt, doc/geany.html:
   Fix wording - restarting is required for hidden prefs.
   File templates don't need manual reloading anymore.


2010-07-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/printing.c, doc/geany.txt, doc/geany.html:
   Always use white background color when printing (except for text
   with a white foreground) to save ink (should fix #2968998).
 * src/build.c, src/build.h, doc/geany.txt, doc/geany.html:
   Limit build error editor indicators to 50, but parse all errors in
   the Compiler tab (fixes #3019823).


2010-06-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c:
   Re-enable fold.comment for the C lexer - it was disabled to prevent
   //{ explicit folding, but that also disables stream comments /* */.
 * tagmanager/tm_workspace.c, tagmanager/get.c:
   Use g_free instead of free (patch by Daniel Marjamäki, thanks).

